Fixes to build and test on Java 16+
* Open java.io during testing so we can access raw file
  descriptors.
* Specify release for javadoc so it doesn't complain about missing
  javadoc bundle.

Fixes #37